--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -23,18 +23,18 @@
 
 .about-project__block {
   display: grid;
-  grid-template-columns: 48.25% 48.25%;
+  grid-template-columns: calc(50% - 20px) calc(50% - 20px);
   gap: 40px;
   margin: 70px 0 110px;
 }
 
-.about-project__block_description {
+.about-project__block-description {
   display: flex;
   flex-direction: column;
   gap: 26px;
 }
 
-.about-project__block_title {
+.about-project__block-title {
   margin: 0;
   font-family: 'Inter', Arial, sans-serif;
   font-size: 20px;
@@ -42,9 +42,10 @@
   font-style: normal;
   line-height: 1.21;
   color: #fff;
+  letter-spacing: -0.04em;
 }
 
-.about-project__block_text {
+.about-project__block-text {
   margin: 0;
   font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
@@ -110,24 +111,24 @@
 
   .about-project__block {
     display: grid;
-    grid-template-columns: 47.75% 47.75%;
+    grid-template-columns: calc(50% - 15px) calc(50% - 15px);
     gap: 30px;
     margin-bottom: 93px;
   }
-  
-  .about-project__block_description {
+
+  .about-project__block-description {
     gap: 22px;
   }
 
-  .about-project__block_text {
+  .about-project__block-text {
     font-size: 12px;
     line-height: 1.5;
   }
-  
+
   .about-project__time {
     grid-template-columns: 21% 79%;
   }
-  
+
   .about-project__backend-txt {
     font-weight: 400;
     color: #A0A0A0;
@@ -139,7 +140,7 @@
     width: calc(100% - 36px);
     margin: 70px auto;
   }
-  
+
   .about-project__title {
     font-size: 18px;
     padding-bottom: 28px;
@@ -150,35 +151,35 @@
     gap: 56px;
     margin: 60px 0;
   }
-  
-  .about-project__block_description {
+
+  .about-project__block-description {
     gap: 16px;
   }
-  
-  .about-project__block_title {
+
+  .about-project__block-title {
     font-size: 18px;
     line-height: 1.225;
   }
-  
-  .about-project__block_text {
+
+  .about-project__block-text {
     font-size: 11px;
     line-height: 1.46;
   }
-  
+
   .about-project__time {
     grid-template-columns: 35.2% 64.8%;
   }
-  
+
   .about-project__backend {
     height: 35px;
     font-size: 11px;
   }
-  
+
   .about-project__frontend {
     height: 35px;
     font-size: 11px;
   }
-  
+
   .about-project__time-txt {
     margin-top: 10px;
     font-size: 11px;
