--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -47,6 +47,7 @@
   font-weight: 400;
   font-style: normal;
   line-height: 1.667;
+  letter-spacing: -0.04em;
   color: #fff;
   margin: 0;
   text-decoration: none;
@@ -61,8 +62,10 @@
 }
 
 .portfolio__link-img {
-  width: 16px;
-  height: 16px;
+  width: 17px;
+  height: 17px;
+  margin: 4px 6px 0 0;
+  letter-spacing: -0.04em;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
@@ -94,7 +97,7 @@
 @media screen and (max-width: 425px) {
   .portfolio {
     width: calc(100% - 28px);
-    margin-top: 70px;
+    margin-top: 69px;
   }
 
   .portfolio__title {
@@ -104,20 +107,32 @@
   }
 
   .portfolio__links {
-    margin-top: 40px;
+    margin-top: 41px;
   }
 
   .portfolio__links-element {
     border-bottom: 1px solid #E6E6E6;
+    padding: 21px 0 18px;
   }
+
+  .portfolio__links-element:first-of-type {
+    padding: 0 0 18px;
+  }
+
+  .portfolio__links-element:last-of-type {
+    border-bottom: none;
+    padding: 21px 0 0;
+  }
+
 
   .portfolio__link {
     font-size: 18px;
-    line-height: 1.56;
+    line-height: 1.555;
   }
 
   .portfolio__link-img {
     width: 10px;
     height: 10px;
+    margin: -4px 5px 0 0;
   }
 }
