--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -18,7 +18,7 @@
 }
 
 .profile__form{
-  margin: 123px 0 0;
+  margin: 124px 0 0;
   display: flex;
   flex-direction: column;
 }
@@ -30,12 +30,13 @@
   align-items: start;
   justify-content: space-between;
   border-bottom: none;
-  margin-top: 17px;
+  margin-top: 18px;
 }
 
 .profile__form-block:first-of-type {
   border-bottom: 1px solid #424242;
   margin-top: 0;
+  height: 29px;
 }
 
 .profile__label {
@@ -44,7 +45,7 @@
   font-size: 11px;
   font-weight: 500;
   font-style: normal;
-  line-height: 1.18;
+  line-height: 1.27;
   color: #fff;
 }
 
@@ -59,8 +60,12 @@
   font-size: 11px;
   font-weight: 400;
   font-style: normal;
-  line-height: 1.18;
+  line-height: 1.27;
   color: #fff;
+}
+
+.profile__input:focus {
+  border-bottom: 1px solid #4285F4;
 }
 
 .profile__input-error_active {
@@ -85,12 +90,15 @@
 }
 
 .profile__buttons {
-  margin: 204px 0 0;
+  margin: 203px 0 0;
   width: 100%;
   position: relative;
 }
 
 .profile__button-edit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 16px;
   border: none;
@@ -110,6 +118,9 @@
 }
 
 .profile__button-exit{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 16px;
   margin: 16px 0 0;
@@ -163,11 +174,11 @@
   }
 
   .profile__form{
-    margin-top: 96px;
+    margin-top: 97px;
   }
 
   .profile__buttons {
-    margin-top: 194px;
+    margin-top: 193px;
   }
 }
 
@@ -177,11 +188,11 @@
   }
 
   .profile__form{
-    margin-top: 80px;
+    margin-top: 81px;
   }
 
   .profile__buttons {
-    margin-top: 363px;
+    margin-top: 362px;
   }
 
   .profile__button-edit {
