--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -33,6 +33,7 @@
 }
 
 .search__input {
+  padding: 0;
   width: 100%;
   background: transparent;
   border: none;
@@ -43,6 +44,10 @@
   font-style: normal;
   line-height: 1.11;
   color: #fff;
+}
+
+.search__input:focus {
+  border-bottom: 1px solid #4285F4;
 }
 
 .search__button-submit {
@@ -79,13 +84,14 @@
 @media screen and (max-width: 425px) {
   .search {
     width: calc(100% - 20px);
-    padding: 80px 0 44px;
+    padding: 80px 0 0;
+    border: none;
   }
 
   .search__container {
     flex-direction: column;
     background: transparent;
-    height: 137px;
+    height: 182px;
   }
 
   .search__form {
