--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -52,10 +52,20 @@
 }
 
 .techs__list {
-  display: flex;
+  width: 100%;
+  max-width: 690px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 90px);
   list-style: none;
   margin: 100px auto 0;
   padding: 0;
+  gap: 10px;
+  justify-content: center;
+}
+
+.techs__element {
+  width: 90px;
+  height: 60px;
   font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -63,12 +73,6 @@
   line-height: 1.21;
   color: #fff;
   letter-spacing:-0.04em;
-  gap: 10px;
-}
-
-.techs__element {
-  width: 90px;
-  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,13 +106,13 @@
     grid-template-columns: repeat(auto-fill, 84px);
     align-items: center;
     justify-content: center;
-    font-size: 12px;
-    line-height: 1.25;
   }
 
   .techs__element {
     width: 84px;
     height: 57px;
+    font-size: 12px;
+    line-height: 1.25;
   }
 }
 
@@ -148,12 +152,12 @@
     grid-template-columns: repeat(2, 84px);
     align-items: center;
     justify-content: center;
-    font-size: 12px;
-    line-height: 1.25;
   }
 
   .techs__element {
     width: 84px;
     height: 57px;
+    font-size: 12px;
+    line-height: 1.25;
   }
 }
