--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,7 +15,6 @@
 .card__link {
   width: 100%;
   display: flex;
-  border-radius: 6px;
 }
 
 .card__image {
@@ -24,12 +23,11 @@
   display: block;
   object-fit: cover;
   object-position: center;
+  border-radius: 6px;
 }
 
 .card__description {
   margin: 14px 14px 0;
-  /*position: relative;*/
-  /*height: 18px;*/
   display: flex;
   justify-content: space-between;
 }
@@ -43,7 +41,6 @@
   line-height: 1.21;
   color: #fff;
   margin: 0;
-  /*position: absolute;*/
   top: 0;
   left: 0;
 }
@@ -62,7 +59,6 @@
   border-radius: 3px;
   width: 52px;
   height: 18px;
-  /*position: absolute;*/
   top: 0;
   right: 0;
 }
@@ -87,7 +83,7 @@
   color:#fff;
   cursor: pointer;
   opacity: 1;
-  transition: all .3s linear;
+  transition: opacity .3s linear;
 }
 
 .card__button-saved:hover {
@@ -109,7 +105,7 @@
   border: none;
   cursor: pointer;
   opacity: 1;
-  transition: all .3s linear;
+  transition: opacity .3s linear;
 }
 
 .card__button-saved_active:hover {
@@ -134,7 +130,7 @@
   cursor: pointer;
   visibility: hidden;
   opacity: 1;
-  transition: all .3s linear;
+  transition: opacity .3s linear;
 }
 
 .card__button-delete:hover {
@@ -151,7 +147,6 @@
   }
 
   .card__name {
-    /*width: calc(100% - 89px);*/
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
