--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -14,6 +14,7 @@
   width: 100%;
   height: 72px;
   border-radius: 9px;
+  position: relative;
 }
 
 .search__form {
@@ -64,6 +65,30 @@
 
 .search__button-submit:hover {
   opacity: .8;
+}
+
+.search__button-submit:disabled {
+  pointer-events: none;
+  user-select: none;
+  opacity: 0.4;
+}
+
+.search__input-error {
+  display: none;
+  position: absolute;
+  top: 80px;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.21;
+  margin: 0;
+  padding: 0;
+  min-height: 12px;
+  color: #EE3465;
+}
+
+.search__input-error_active {
+  display: block;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
